@@ -2,6 +2,9 @@
   * Add incremental decoding support for images containing ALPH and ICCP chunks.
   * New function: WebPMuxGetCanvasSize
   * BMP and TIFF format output added to 'dwebp'
+  * Significant memory reduction for decoding lossy images with alpha.
+  * Intertwined decoding of RGB and alpha for a shorter
+    time-to-first-decoded-pixel.
 
 - 3/20/13: version 0.3.0
   This is a binary compatible release.
